# secondo

./: .clang-format  .cvsignore  .gitignore  .travis.yml  LICENSE.TXT  README.md  bin_demo.exclude  buglist  catvar.sh  exclude.pat  include.dep  makefile  makefile.algebras  makefile.algebras.cibuild  makefile.algebras.sample  makefile.android  makefile.cm  makefile.config  makefile.env  makefile.jni  makefile.jni.sample  makefile.libs  makefile.linux  makefile.linux64  makefile.mac_osx  makefile.nonpublic  makefile.oci  makefile.optimizer  makefile.options  makefile.solaris  makefile.win32  makefile.wine  nonpublic.filelist  opt_demo.exclude  readme  secondo-bashrc  setvar.bash  setvar.csh  wmake.sh
Algebras/: .cvsignore  (+5 more)
Algebras/Kafka/: .cvsignore  CMakeLists.txt  ConsoleConsumer.cpp  ConsoleConsumer.h  ConsoleConsumerOperator.cpp  ConsoleConsumerOperator.h  Demo.txt  Kafka.examples  Kafka.spec  KafkaAlgebra.cpp  KafkaClient.cpp  KafkaClient.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  KafkaSource.cpp  KafkaSource.h  LocalKafkaManagement.cpp  LocalKafkaManagement.h  ReadFromKafkaOperator.cpp  ReadFromKafkaOperator.h  ReadFromWsOperator.cpp  ReadFromWsOperator.h  Readme.txt  Readme_Examples.txt  Readme_Kafka_Examples.txt  Readme_WebSockets_Examples.txt  SignalingSockets.h  StreamStopping.cpp  StreamStopping.h  Utils.cpp  Utils.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketClientPrototype.cpp  WebSocketClientPrototype.h  WebSocketGateway.cpp  WebSocketGateway.h  WriteToKafkaOperator.cpp  (+8 more)
Algebras/Kafka/experimenting/: MyReadme.txt  NRW object sizes.txt  NRW objects.txt  NRW_Kafka_read_writes.txt  bitCoinExamples.txt  lockTableBuildings.txt  lockTableError.txt  writeRoads.txt
Algebras/Kafka/experimenting/c++features/: CMakeLists.txt  main.cpp
Algebras/Kafka/experimenting/kafkafromc/: CMakeLists.txt  main.cpp  readme.txt
Algebras/Kafka/scripts/: installKafka.sh  kafkaCluster.sh  kafkaStartup.sh  start_kafka_loop.sh
Tools/DFS/: CMakeLists.txt  Makefile  Makefile.inc  README.md  define.h  gitadd
Tools/DFS/cli/: .cvsignore  Makefile  cli.h  main.cpp
Tools/DFS/commlayer/: EndpointClient.cpp  EndpointClient.h  Makefile  RemoteCommandBuilder.cpp  RemoteCommandBuilder.h  WebServer.cpp  WebServer.h  comm.cpp  comm.h
Tools/DFS/datanode/: .cvsignore  Chunk.h  DataNode.cpp  DataNode.h  DataNodeClientHandler.cpp  DataNodeClientHandler.h  DataNodeClientHandlerFactory.cpp  DataNodeClientHandlerFactory.h  DataNodeConfig.h  Makefile  State.cpp  State.h  deleteData  deleteMyData  main.cpp  startMyServers  startnode  stopMyServers  stopnode
Tools/DFS/dfs/: Makefile  SimpleFilesystemReader.cpp  dfs.h  dfs.layout  remotedfs.cpp  remotedfs.h  remotedfs_receive.cpp  remotedfs_store.cpp
Tools/DFS/dfshdfs/: Makefile  dfshdfs.cpp  dfshdfs.h
Tools/DFS/indexnode/: .cvsignore  Configuration.h  DataNodeEntry.h  DataNodeIndex.cpp  DataNodeIndex.h  IndexNode.cpp  IndexNode.h  IndexNodeManager.cpp  IndexNodeManager.h  Makefile  main.cpp
Tools/DFS/qunit/: Makefile  qunit.cpp  qunit.h
Tools/DFS/qunitrunner/: .cvsignore  Makefile  main.cpp
Tools/DFS/qunitrunner-hdfs/: Makefile  main.cpp  start.sh
Tools/DFS/scripts/: clusterControl.sh  clusterControlConfig.ini  gitadd  hadooptester  measure  run-new-tinycluster.sh  run-testcluster.sh  special_usecases  systemtest.sh
Tools/DFS/shared/: FigureSystem.cpp  FigureSystem.h  Makefile  ParameterHelper.cpp  ParameterHelper.h  Reader.cpp  checksum.cpp  checksum.h  datetime.cpp  datetime.h  debug.cpp  debug.h  format.h  io.cpp  io.h  log.cpp  log.h  maschine.cpp  maschine.h  numberUtils.cpp  numberUtils.h  remotemetadata.h  str.cpp  str.h  uri.h
(+11707 files in other folders)
