cmake_minimum_required(VERSION 3.9)
project(dfs)

set(CMAKE_CXX_STANDARD 11)
include_directories(/home/kingster/masterarbeit/hadoop/include)

add_executable(dfs
        cli/cli.h
        cli/main.cpp
        clihdfs/clihdfs.cpp
        commlayer/comm.cpp
        commlayer/comm.h
        commlayer/EndpointClient.cpp
        commlayer/EndpointClient.h
        commlayer/RemoteCommandBuilder.cpp
        commlayer/RemoteCommandBuilder.h
        commlayer/WebServer.cpp
        commlayer/WebServer.h
        datanode/Chunk.h
        datanode/DataNode.cpp
        datanode/DataNode.h
        datanode/DataNodeClientHandler.cpp
        datanode/DataNodeClientHandler.h
        datanode/DataNodeClientHandlerFactory.cpp
        datanode/DataNodeClientHandlerFactory.h
        datanode/DataNodeConfig.h
        datanode/main.cpp
        datanode/State.cpp
        datanode/State.h
        dfs/dfs.h
        dfs/remotedfs.cpp
        dfs/remotedfs.h
        dfs/remotedfs_receive.cpp
        dfs/remotedfs_store.cpp
        dfs/SimpleFilesystemReader.cpp
        dfshdfs/dfshdfs.cpp
        dfshdfs/dfshdfs.h
        indexnode/Configuration.h
        indexnode/DataNodeEntry.h
        indexnode/DataNodeIndex.cpp
        indexnode/DataNodeIndex.h
        indexnode/IndexNode.cpp
        indexnode/IndexNode.h
        indexnode/IndexNodeManager.cpp
        indexnode/IndexNodeManager.h
        indexnode/main.cpp
        qunit/qunit.cpp
        qunit/qunit.h
        qunitrunner/main.cpp
        shared/checksum.cpp
        shared/checksum.h
        shared/datetime.cpp
        shared/datetime.h
        shared/FigureSystem.cpp
        shared/FigureSystem.h
        shared/format.h
        shared/io.cpp
        shared/io.h
        shared/log.cpp
        shared/log.h
        shared/maschine.cpp
        shared/maschine.h
        shared/numberUtils.cpp
        shared/numberUtils.h
        shared/ParameterHelper.cpp
        shared/ParameterHelper.h
        shared/Reader.cpp
        shared/remotemetadata.h
        shared/str.cpp
        shared/str.h
        shared/uri.h
        tester/tester.cpp
        define.h)
